[metadata]
name = realbook
version = attr: realbook.__version__
description = Realbook, a library to make using audio on Tensorflow easier.
long_description = Realbook, a library to make using audio on Tensorflow easier.
author = Spotify
author_email = realbook@spotify.com
maintainer = Spotify
maintainer_email = realbook@spotify.com
url = https://github.com/spotify/realbook
keywords =
license = Apache 2.0
classifiers =
    Development Status :: 3 - Alpha
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    # Support TensorFlow on Apple Silicon Macs:
    # TF does not support Python 3.11 as of Dec. 2022
    tensorflow>=2.4; sys_platform != 'darwin' or platform.machine != 'arm64'
    tensorflow-macos>=2.4; sys_platform == 'darwin' and platform.machine == 'arm64'
    tensorboard>=2.4
    # Because of previous backwards compatibility issues, we bump this
    # manually every librosa release
    librosa>=0.9,<0.10
    types-protobuf

[options.extras_require]
dev =
    realbook[tensorboard,test]
    bumpversion>=0.5.3
    ipython
    ipdb
tensorboard =
    matplotlib
    psutil
    nvsmi
test =
    coverage>=5.0.2
    pytest>=7.1.1
    pytest-cov>=4.0.0
    pytest-mock>=3.10.0
    tox
    torch
    nnaudio


[bumpversion]
current_version = 1.0.0
commit = True
tag = True

[bumpversion:file:realbook/__init__.py]

[bdist_wheel]
universal = 1
