[bumpversion]
current_version = 1.0.4
commit = True
tag = True

[metadata]
name = realbook
version = attr: realbook.__version__
description = Realbook, a library to make using audio on TensorFlow easier.
long_description = Realbook, a library to make using audio on TensorFlow easier.
author = Spotify
author_email = realbook@spotify.com
maintainer = Spotify
maintainer_email = realbook@spotify.com
url = https://github.com/spotify/realbook
keywords = 
license = Apache 2.0
classifiers = 
	Development Status :: 5 - Production/Stable
	Natural Language :: English
	Operating System :: POSIX :: Linux
	Operating System :: MacOS :: MacOS X
	Operating System :: Microsoft :: Windows
	Programming Language :: Python
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
packages = find:
include_package_data = True
# Note we don't yet support TensorFlow 2.16 or later due to Keras 3,
# which does not support complex datatypes.
install_requires = 
	tensorflow>=2.4,<2.16; sys_platform != 'darwin' or platform.machine != 'arm64'
	# TF 2.13 finally publishes ARM wheels:
	tensorflow>=2.13,<2.16; sys_platform == 'darwin' and platform.machine == 'arm64'
	types-protobuf
	numpy
	typing_extensions

[options.extras_require]
dev = 
	realbook[tensorboard,test]
	bumpversion>=0.5.3
tensorboard = 
	matplotlib
	psutil
	nvsmi
	librosa>=0.9
test = 
	coverage>=5.0.2
	pytest>=7.1.1
	pytest-cov>=4.0.0
	pytest-mock>=3.10.0
	tox
	torch
	nnaudio
	numpy>=1.22
	librosa>=0.9
	tensorflow>=2.4,<2.16; sys_platform != 'darwin' or platform.machine != 'arm64'
	# TF 2.13 finally publishes ARM wheels:
	tensorflow>=2.13,<2.16; sys_platform == 'darwin' and platform.machine == 'arm64'

[bumpversion:file:realbook/__init__.py]

[bdist_wheel]
universal = 1

